# ChangeLog for x11-misc/bmpanel
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Oct 2008; Christian Ruppert (idl0r) <spooky85@gmail.com>
  +bmpanel-0.9.27.ebuild, +files/Makefile-no-strip.patch, +metadata.xml:
  New Ebuild for bug 242830 thanks to Paul.
