@@ -1,5 +1,5 @@
 AUX Makefile-no-strip.patch 326 RMD160 2930f6e468be1bc9e0fddc85f0822a031be1a133 SHA1 8037d1dd8d597d442f3c6b249041a5357e3337cb SHA256 49f8e25e6549d37dbc110ead7e3d601bb1e95cde2da2aaf273401f33bc808aa7
 DIST bmpanel-0.9.27.tar.gz 30638 RMD160 97198480c6c9084cb2b32d05c3ca021811353134 SHA1 c048fbea3eb4f3f70f1086e23c338cdee2dec0b6 SHA256 a6976d024800b878117161174cc6ca57b21b2462666e75111cdd32eea8464557
-EBUILD bmpanel-0.9.27.ebuild 1455 RMD160 63c47f4a13983deccbce52eb948144b7ac290887 SHA1 1964089aa410ab8d0ca0892f1dd833cb04f9f40b SHA256 1a18e70038b6747ea3aa920c68213eb91c300390aeba0da50b226a398721fcf2
-MISC ChangeLog 297 RMD160 142034b199ce5bd9f9307221aab2c38c2b3b1bd2 SHA1 494e8d18520c1fee6fd83005fd2fcb6bf59a9876 SHA256 ab82077edf510f9bbd6669985594e2f64d326db3e8abd650f8931130da29236f
+EBUILD bmpanel-0.9.27.ebuild 1476 RMD160 6bfe68fd03aedbeaad14dc171a550ed7eff4cc4e SHA1 0f8b3de0783cf1fe781ca8c372620afa545b828e SHA256 02df70e10ce87089c1bb08e0a949be4aac40b5f1df956ae9cb1dacfd0fbc4c67
+MISC ChangeLog 424 RMD160 84cc78a5846db459dbab976f631bf732f466d952 SHA1 c5210cee91e9dd7821e58ff6536b83fb9121099e SHA256 2ae7271b33f6821d4bc78361c86850c0e42cf8946b747f54eed6f441bd59c9ac
 MISC metadata.xml 318 RMD160 3c2ef6651b1c4a1bf23c445ddb0072e602baaaa5 SHA1 b596897d814c18a09420ee5662189b39be68f86e SHA256 4c9b660e1620b770980130fe40148b41c62f1d9886a3a8c6ef468034dd21b273
